src/test/deca/syntax/valid/created/class_body1.deca
class A{
	void methA(){
		int a;
		int b;
		a = 5;
		b = 2;
		a = a + b;
	}
}

{}
