src/test/deca/syntax/invalid/created/faux33.deca
class CCEC{
	void methC(int a, int b){
		int a = a + b;
	}
}

{}
